# hobar-richspace

./: .gitignore  Cargo.toml  FFI_ANALYSIS.md  MIGRATION.md  MIGRATION_PATCH.md  README.md  SHARED_CRATE_REQUIREMENTS.md  build.rs  justfile  plugin.c  plugin.h  richspace.desktop
repro/: Cargo.toml  README.md
repro/src/: main.rs
src/: app.rs  config.rs  lib.rs  state.rs
src/providers/: mod.rs  render.rs
src/ui/: animation.rs  context_menu.rs  mod.rs  panel_widget.rs  panel_widget.rs.bak
src/wnck/: mod.rs
src/xfce/: ffi.rs  mod.rs  plugin.rs
