[package]
name = "xfce4-panel-richspace"
version = "0.1.0"
edition = "2021"
authors = ["nuck"]
description = "Custom workspace display for XFCE4 panel with configurable labels and icons (emoji, fontawesome, nerd font)"
license = "GPL-2.0-or-later"

[lib]
name = "richspace"
# staticlib for GCC final link (cdylib symbols get hidden by rustc)
crate-type = ["staticlib", "cdylib"]

[dependencies]
# GTK3 bindings
gtk = { version = "0.18", features = ["v3_24"] }
glib = "0.18"
gdk = "0.18"
pango = "0.18"
cairo-rs = "0.18"

# Low-level GTK sys crates for FFI
gtk-sys = "0.18"
glib-sys = "0.18"
gobject-sys = "0.18"
gdk-sys = "0.18"

# libwnck bindings (shared crate)
wnck-rs = { path = "../../Lib/wnck-rs" }

# File watching for live config reload
notify = "6"

# FFI utilities
libc = "0.2"

# Error handling
thiserror = "1"
anyhow = "1"

# Serialization (JSON state, TOML logging config)
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Directories
dirs = "5"

# Signal handling for hot-reload
signal-hook = "0.3"

# Logging - tracing ecosystem for structured, async-safe logging
# Sink: journald (view with: journalctl -t richspace)
# Level: Centralized ~/Workspace/logging.toml, hot-reloaded on SIGHUP
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-journald = "0.3"

# Spaceship shared logging infrastructure
spaceship-std = { version = "0.1", path = "../../Lib/spaceship-std" }

[build-dependencies]
pkg-config = "0.3"
cc = "1"

[profile.release]
# LTO strips unreferenced C symbols - must disable for plugin to load
lto = false
strip = false
